Add profileId for the account.
