# pwt-repo-jpa/src/main/java/ac/obl/paywent/repository/account/AccountEntityMapper.java
@@ -3,27 +3,24 @@ package ac.obl.paywent.repository.account;
 import ac.obl.paywent.domain.Account;
 import ac.obl.paywent.domain.AccountIdMappers;
 import ac.obl.paywent.domain.NewAccount;
+import ac.obl.paywent.domain.ProfileIdMappers;
+import ac.obl.paywent.map.PwtMapperConfig;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
-import java.time.Instant;
+@Mapper(config = PwtMapperConfig.class)
+public interface AccountEntityMapper extends AccountIdMappers, ProfileIdMappers {
 
-@Mapper(componentModel = "spring")
-public interface AccountEntityMapper extends AccountIdMappers {
+    @Mapping(target = "id", source = "id", qualifiedBy = MapAccountIdToUUID.class)
+    @Mapping(target = "profileId", source = "profileId", qualifiedBy = MapProfileIdToUUID.class)
+    AccountEntity toEntity(Account account);
 
-	@Mapping(target = "id", source = "id", qualifiedBy = MapAccountIdToUUID.class)
-	AccountEntity toEntity(Account account);
+    @Mapping(target = "id", source = "id", qualifiedBy = MapUUIDToAccountId.class)
+    @Mapping(target = "profileId", source = "profileId", qualifiedBy = MapUUIDToProfileId.class)
+    Account toModel(AccountEntity accountEntity);
 
-	@Mapping(target = "id", source = "id", qualifiedBy = MapUUIDToAccountId.class)
-	Account toModel(AccountEntity accountEntity);
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "profileId", source = "profileId", qualifiedBy = MapProfileIdToUUID.class)
+    AccountEntity toEntity(final NewAccount newAccount);
 
-	default AccountEntity toEntity(final NewAccount newAccount) {
-		return AccountEntity.builder()
-				.name(newAccount.getName())
-				.number(newAccount.getNumber())
-				.type(newAccount.getType())
-				.updatedAt(Instant.now())
-				.createdAt(Instant.now())
-				.build();
-	}
 }
